Added: style to start activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EverCalm Senses</string>
+    <string name="startupText">Welcome to EverCalm Senses</string>
 </resources>
