--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">EverCalm Senses</string>
     <string name="startupText">Welcome to EverCalm Senses</string>
+    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
