--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">EverCalm Senses</string>
-    <string name="startupText">Welcome to EverCalm Senses</string>
-    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
+    <string name="app_name">EverCalm Senses™</string>
+    <string name="startupText">Welcome to EverCalm Senses™</string>
+    <string name="title_activity_main_tabbed">EverCalm Senses™</string>
     <string name="action_settings">Settings</string>
+    <string name="action_exit">Exit</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="service_not_logging">Connected to device, not logging.</string>
     <string name="service_is_logging">Connected to device, logging data.</string>
